# TriggerMind

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: install.ps1  install.sh
tests/: test_cli.py  test_scheduler_actions.py  test_store.py  test_timeparse.py
triggermind/: __init__.py  doctor.py  main.py  models.py  paths.py  timeparse.py
triggermind/notifications/: manager.py
triggermind/scheduler/: daemon.py
triggermind/storage/: json_store.py
triggermind/triggers/: absolute.py  base.py  stubs.py  timer.py
triggermind/ui/: __init__.py  app.py
typer/: __init__.py  testing.py
